[package]
name = "bcm2835-rs"
version = "0.1.0"
authors = ["Piotr Zaczkowski <pzaczkowski@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[build-dependencies]
bindgen = "0.56.x"
cc = "1.0.x"
